src/libACQ/Ni/Include/Flexmotn.h




// PID is the structure passed to flex_load_loop_params() function
//	(PID and PIVFF parameters)
typedef struct{
	u16 kp;
	u16 ki;
	u16 ilim;
	u16 kd;
	u16 td;
	u16 kv;
	u16 aff;
	u16 vff;
} PID;



// The Initialization function
FLEXFUNC flex_initialize_controller (BOARD, i8 FAR *settingsName);


///////////////////////////////////////////////////////////////////////////////////////
// Axis & Resource Configuration Functions
///////////////////////////////////////////////////////////////////////////////////////

//Configure Axis Resources
FLEXFUNC flex_config_axis(BOARD, u8 axis, u8 primaryFeedback, u8 secondaryFeedback,
                          u8 primaryOutput, u8 secondaryOutput);


//Configure Move Complete Status Criteria
FLEXFUNC flex_config_mc_criteria(BOARD, u8 axis, u16 criteria, u16 deadband, u8 delay,
											u8 minPulse);


//Configure Step Mode & Polarity 
FLEXFUNC flex_config_step_mode_pol(BOARD, u8 axisOrStepperOutput, u16 modeAndPolarityMap);


//Configure Vector Space
FLEXFUNC flex_config_vect_spc(BOARD, u8 vectorSpace, u8 xAxis, u8 yAxis, u8 zAxis);


//Enable Axes
FLEXFUNC flex_enable_axes(BOARD, u8 reserved, u8 PIDRate, u8 axisMap);


// Load Counts/Steps per Revolution
FLEXFUNC flex_load_counts_steps_rev(BOARD, u8 axisOrEncoder, u16 unitType, u32 countsOrSteps);


//Load All PID Parameters
FLEXFUNC flex_load_pid_parameters(BOARD, u8 axis, PID FAR *PIDValues, u8 inputVector);


// Load Single PID Parameter
FLEXFUNC flex_load_single_pid_parameter(BOARD, u8 axis, u16 parameterType, u16 PIDValue, u8 inputVector);


//Load Velocity Filter Time Constant & Run/Stop Threshold
FLEXFUNC flex_load_vel_tc_rs(BOARD, u8 axis, u16 filterTime, u16 runStopThreshold, u8 inputVector);


//Set Stepper Loop Mode
FLEXFUNC flex_set_stepper_loop_mode(BOARD, u8 axis, u16 loopMode);



///////////////////////////////////////////////////////////////////////////////////////
// Trajectory Functions
///////////////////////////////////////////////////////////////////////////////////////

// Load Acceleraton
FLEXFUNC flex_load_acceleration(BOARD, u8 axisOrVectorSpace, u16 accelerationType, u32 acceleration, u8 inputVector);


//Load Following Error
FLEXFUNC flex_load_follow_err(BOARD, u8 axis, u16 followingError, u8 inputVector);


//Load Velocity in RPM
FLEXFUNC flex_load_rpm(BOARD, u8 axisOrVectorSpace, f64 RPM, u8 inputVector);


// Load Acceleration in RPS/sec
FLEXFUNC flex_load_rpsps(BOARD, u8 axisOrVectorSpace, u16 accelerationType, f64 RPSPS, u8 inputVector);


//Load Target Position
FLEXFUNC flex_load_target_pos(BOARD, u8 axis, i32 targetPosition, u8 inputVector);


//Load Velocity
FLEXFUNC flex_load_velocity(BOARD, u8 axisOrVectorSpace, i32 velocity, u8 inputVector);


//Load Vector Space Position
FLEXFUNC flex_load_vs_pos (BOARD, u8 vectorSpace, i32 xPosition, i32 yPosition, i32 zPosition, u8 inputVector);


//Read per Axis Status
FLEXFUNC flex_read_axis_status(BOARD, u8 axis, u8 returnVector);

//Read per Axis Status
FLEXFUNC flex_read_axis_status_rtn(BOARD, u8 axis, u16 FAR *axisStatus);


//Read Blend Status
FLEXFUNC flex_read_blend_status(BOARD, u8 axisOrVectorSpace, u8 returnVector);

//Read Blend Status
FLEXFUNC flex_read_blend_status_rtn(BOARD, u8 axisOrVectorSpace, u16 FAR *blendStatus);


//Read Following Error
FLEXFUNC flex_read_follow_err(BOARD, u8 axisOrVectorSpace, u8 returnVector);

//Read Following Error
FLEXFUNC flex_read_follow_err_rtn(BOARD, u8 axisOrVectorSpace, i16 FAR *followingError);


//Read Motion Complete Status
FLEXFUNC flex_read_mcs_rtn(BOARD, u16 FAR *moveCompleteStatus);


//Read Position
FLEXFUNC flex_read_pos(BOARD, u8 axis, u8 returnVector);

//Read Position
FLEXFUNC flex_read_pos_rtn(BOARD, u8 axis, i32 FAR *position);


//Read Velocity in RPM
//The data is returned in "IEEE f64" format and has to be converted appropriately.
FLEXFUNC flex_read_rpm(BOARD, u8 axisOrVectorSpace, u8 returnVector);

//Read Velocity in RPM
//The data is returned in "IEEE f64" format and is converted in the DLL.
FLEXFUNC flex_read_rpm_rtn(BOARD, u8 axisOrVectorSpace, f64 FAR *RPM);


// Read Trajectory Status
FLEXFUNC flex_read_trajectory_status(BOARD, u8 axisOrVectorSpace, u16 statusType, u8 returnVector);

// Read Trajectory Status
FLEXFUNC flex_read_trajectory_status_rtn(BOARD, u8 axisOrVectorSpace, u16 statusType, u16 FAR *status);


//Read Velocity
FLEXFUNC flex_read_velocity(BOARD, u8 axisOrVectorSpace, u8 returnVector);

//Read Velocity
FLEXFUNC flex_read_velocity_rtn(BOARD, u8 axisOrVectorSpace, i32 FAR *velocity);


//Read Vector Space Position
FLEXFUNC flex_read_vs_pos (BOARD, u8 vectorSpace, u8 returnVector);

//Read Vector Space Position
FLEXFUNC flex_read_vs_pos_rtn (BOARD, u8 vectorSpace, i32 FAR *xPosition, i32 FAR *yPosition, i32 FAR *zPosition);


//Reset Position
FLEXFUNC flex_reset_pos (BOARD, u8 axis, i32 position1, i32 position2, u8 inputVector);


//Set Operation Mode
FLEXFUNC flex_set_op_mode (BOARD, u8 axisOrVectorSpace, u16 operationMode);


// Check Move Complete Status
FLEXFUNC flex_check_move_complete_status (BOARD, u8 axisOrVectorSpace, 
														u16 axisOrVSMap, u16* moveComplete);


// Check Blend Complete Status
FLEXFUNC flex_check_blend_complete_status (BOARD, u8 axisOrVectorSpace, 
														 u16 axisOrVSMap, u16* blendComplete);


// Wait for Move Complete
FLEXFUNC flex_wait_for_move_complete (BOARD, u8 axisOrVectorSpace, u16 axisOrVSMap, 
												  u32 timeout, i32 pollInterval, u16* moveComplete);


// Wait for Blend Complete
FLEXFUNC flex_wait_for_blend_complete (BOARD, u8 axisOrVectorSpace, u16 axisOrVSMap, 
													u32 timeout, i32 pollInterval, u16* blendComplete);


//////// Arcs  Functions

//Load Circular Arc
FLEXFUNC flex_load_circular_arc (BOARD, u8 vectorSpace, u32 radius, f64 startAngle,
                     f64 travelAngle, u8 inputVector);


//Load Helical Arc
FLEXFUNC flex_load_helical_arc (BOARD, u8 vectorSpace, u32 radius, f64 startAngle,
               f64 travelAngle, i32 linearTravel, u8 inputVector);