src/libACQ/Ni/Include/flexcomp.h



//Wait on Condition
FLEXFUNC flex_wait(BOARD, u8 device, u16 cc, u8 muston, u8 mustoff, u16 timeout, u8 retvect);


//Read Error Message
FLEXFUNC flex_read_err_msg_rtn(BOARD, u16 FAR *commandID, u16 FAR *resourceID, u16 FAR *errorCode);