src/libACQ/Ni/Include/FLEXMOTN.BAS

Attribute VB_Name = "FLEXMOTN"
''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
' FLEXMOTN.BAS File
' Include File for Visual Basic
' Copyright © National Instruments 1996-1998.
''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
'A few notes about the structure of commands
'Commands have many arguments in common, for instance:
'
' boardID: While calling the FlexMotion Dynamic link library (FLEX16.DLL/FlexMotion32.DLL),
' this will be a number from 1 to 32. In 16 bit environment this will
' tell the FlexMotion DLL which record in the <nimotion.cfg> file to search, for
' the address of the board, as well as any the board type.
' In 32 bit environment this information is obtained from the registry (stored during
' Hardware installation).
'
' Resource/axis/encoder/vectorSpace: This tells the board exactly which resource (axis, encoder...) you are
' trying to control or read. The ResourceIDs are listed in the manual.
'
' inputVector: The Input Vector argument tells the board where you want the
' input data values for the command to come from.  For instance, the load_target_pos()
' function could have an inpvect of 0xFF (if data is being sent from the host computer)
' or 0x03 (if data is to be read from general purpose variable 3).
' See the FlexMotion user manual for more information on input
' vectors and general purpose variables.
'
' returnVector: The return vector tells the board where you would like the results of
' the operation to be sent, (ie. returned to the host or sent to a general
' purpose variable. This is only used on read commands and the flex_wait()
' function.
'
' All other arguments are specific to each command, and should be referred
' to in the function reference manual.
'
' The read commands are given in two different styles: with or without
' the _rtn suffix. The functions without the _rtn suffix do not return
' any value to the application that calls them, in fact they don't return data
' to the host application at all unless given the retvect of 0xFF. The value
' must be read explicitly by a separate execution of the flex_read_rdb command.
' The read commands that have the _rtn suffix are expecting a valid pointer
' to where you would like the data returned. These routines do in fact wait
' for the board to respond with data before returning to the calling
' application.
'
' Errors: There are two forms of errors returned:
'  1) Non Modal:   These are returned by the DLL in the return value of
'                  each function. These are usually serious errors like
'                  communication errors.
'  2) Modal:   These errors are returned by the board after the it gets the command.
'              These errors can be read using the flex_read_err_msg_rtn command. It
'              returns the command ID which caused the error, the Resource  and the error
'              code.
'  For Error Codes and Command IDs refer to the online Function Reference

''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
' Data structures used by FlexMotion Commands
' The registry information structure for objects stored on the board
Type registryRecord
    device As Integer
    type As Integer
    pStart As Long
    size As Long
End Type

'The data structure for loading PID values to an axis (servo axis)
Type PidVals
    kp As Integer
    ki As Integer
    ilim As Integer
    kd As Integer
    td As Integer
    kv As Integer
    aff As Integer
    vff As Integer
End Type

''''' The Initialization function
Declare Function flex_initialize_controller Lib "Flex32.dll" (ByVal boardID%, settingsName%) As Integer

'''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
''''' Axis & Resource Configuration Functions
'''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''

'''''Configure Axis Resources
Declare Function flex_config_axis Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axis%, ByVal primaryFeedback%, ByVal secondaryFeedback%, ByVal primaryOutput%, ByVal secondaryOutput%) As Long

'''''Configure Move Complete Status Criteria
Declare Function flex_config_mc_criteria Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axis%, ByVal criteria%, ByVal deadband%, ByVal delay%, ByVal minPulse%) As Long

'''''Configure Step Mode & Polarity
Declare Function flex_config_step_mode_pol Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrStepperOutput%, ByVal modeAndPolarityMap%) As Long

'''''Configure Vector Space
Declare Function flex_config_vect_spc Lib "FlexMotion32.dll" (ByVal boardID%, ByVal vectorSpace%, ByVal XAxis%, ByVal YAxis%, ByVal zAxis%) As Long

'''''Enable Axes
Declare Function flex_enable_axes Lib "FlexMotion32.dll" (ByVal boardID%, ByVal reserved%, ByVal PIDRate%, ByVal axisMap%) As Long

'''''Load Counts/Steps per Revolution
Declare Function flex_load_counts_steps_rev Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axis%, ByVal unitType%, ByVal countsOrSteps&) As Long

'''''Load All PID Parameters
Declare Function flex_load_pid_parameters Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axis%, pidvalues As PidVals, ByVal inputVector%) As Long

''''' Load Single PID Parameter
Declare Function flex_load_single_pid_parameter Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axis%, ByVal parameterType%, ByVal PIDValue%, ByVal inputVector%) As Long

'''''Load Velocity Filter Time Constant & Run/Stop Threshold
Declare Function flex_load_vel_tc_rs Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axis%, ByVal filterTime%, ByVal runStopThreshold%, ByVal inputVector%) As Long

'''''Set Stepper Loop Mode
Declare Function flex_set_stepper_loop_mode Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axis%, ByVal loopMode%) As Long


'''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
''''' Trajectory Functions
'''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''

''''' Load Acceleraton
Declare Function flex_load_acceleration Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrVectorSpace%, ByVal accelerationType%, ByVal Acceleration&, ByVal inputVector%) As Long

'''''Load Following Error
Declare Function flex_load_follow_err Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axis%, ByVal FollowingError%, ByVal inputVector%) As Long

'''''Load Velocity in RPM
Declare Function flex_load_rpm Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrVectorSpace%, ByVal rpm#, ByVal inputVector%) As Long

''''' Load Acceleration in RPS/sec
Declare Function flex_load_rpsps Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrVectorSpace%, ByVal accelerationType%, ByVal RPSPS#, ByVal inputVector%) As Long

'''''Load Target Position
Declare Function flex_load_target_pos Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axis%, ByVal TargetPosition&, ByVal inputVector%) As Long

'''''Load Velocity
Declare Function flex_load_velocity Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrVectorSpace%, ByVal velocity&, ByVal inputVector%) As Long

'''''Load Vector Space Position
Declare Function flex_load_vs_pos Lib "FlexMotion32.dll" (ByVal boardID%, ByVal vectorSpace%, ByVal xPosition&, ByVal yPosition&, ByVal zPosition&, ByVal inputVector%) As Long

'''''Read per Axis Status
Declare Function flex_read_axis_status Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axis%, ByVal returnVector%) As Long
'''''Read per Axis Status
Declare Function flex_read_axis_status_rtn Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axis%, axisStatus%) As Long

'''''Read Blend Status
Declare Function flex_read_blend_status Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrVectorSpace%, ByVal returnVector%) As Long
'''''Read Blend Status
Declare Function flex_read_blend_status_rtn Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrVectorSpace%, blendStatus%) As Long

'''''Read Following Error
Declare Function flex_read_follow_err Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrVectorSpace%, ByVal returnVector%) As Long
'''''Read Following Error
Declare Function flex_read_follow_err_rtn Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrVectorSpace%, FollowingError%) As Long

'''''Read Motion Complete Status
Declare Function flex_read_mcs_rtn Lib "FlexMotion32.dll" (ByVal boardID%, motionCompleteStatus%) As Long

'''''Read Position
Declare Function flex_read_pos Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axis%, ByVal returnVector%) As Long
'''''Read Position
Declare Function flex_read_pos_rtn Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axis%, position&) As Long

'''''Read Velocity in RPM
'''''The data is returned in "IEEE f64" format and has to be converted appropriately.
Declare Function flex_read_rpm Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrVectorSpace%, ByVal returnVector%) As Long
'''''Read Velocity in RPM
'''''The data is returned in "IEEE f64" format and is converted in the DLL.
Declare Function flex_read_rpm_rtn Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrVectorSpace%, rpm#) As Long

''''' Read Trajectory Status
Declare Function flex_read_trajectory_status Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrVectorSpace%, ByVal statusType%, ByVal returnVector%) As Long
''''' Read Trajectory Status
Declare Function flex_read_trajectory_status_rtn Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrVectorSpace%, ByVal statusType%, status%) As Long

'''''Read Velocity
Declare Function flex_read_velocity Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrVectorSpace%, ByVal returnVector%) As Long
'''''Read Velocity
Declare Function flex_read_velocity_rtn Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrVectorSpace%, velocity&) As Long

'''''Read Vector Space Position
Declare Function flex_read_vs_pos Lib "FlexMotion32.dll" (ByVal boardID%, ByVal vectorSpace%, ByVal returnVector%) As Long
'''''Read Vector Space Position
Declare Function flex_read_vs_pos_rtn Lib "FlexMotion32.dll" (ByVal boardID%, ByVal vectorSpace%, xPosition&, yPosition&, zPosition&) As Long

'''''Reset Position
Declare Function flex_reset_pos Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axis%, ByVal position1&, ByVal position2&, ByVal inputVector%) As Long

'''''Set Operation Mode
Declare Function flex_set_op_mode Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrVectorSpace%, ByVal OperationMode%) As Long

''''Check Move Complete Status
Declare Function flex_check_move_complete_status Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrVectorSpace%, ByVal axisOrVSMap%, MoveComplete%) As Long

''''Check Blend Complete Status
Declare Function flex_check_blend_complete_status Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrVectorSpace%, ByVal axisOrVSMap%, BlendComplete%) As Long

''''Wait for Move Complete
Declare Function flex_wait_for_move_complete Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrVectorSpace%, ByVal axisOrVSMap%, ByVal timeout&, ByVal pollInterval&, MoveComplete%) As Long

''''Wait for Blend Complete
Declare Function flex_wait_for_blend_complete Lib "FlexMotion32.dll" (ByVal boardID%, ByVal axisOrVectorSpace%, ByVal axisOrVSMap%, ByVal timeout&, ByVal pollInterval&, BlendComplete%) As Long


'''''''' Arcs  Functions

'''''Load Circular Arc
Declare Function flex_load_circular_arc Lib "FlexMotion32.dll" (ByVal boardID%, ByVal vectorSpace%, ByVal Radius&, ByVal StartAngle#, ByVal travelAngle#, ByVal inputVector%) As Long

'''''Load Helical Arc
Declare Function flex_load_helical_arc Lib "FlexMotion32.dll" (ByVal boardID%, ByVal vectorSpace%, ByVal Radius&, ByVal StartAngle#, ByVal travelAngle#, ByVal linearTravel&, ByVal inputVector%) As Long
